# RAG-System-for-Content-Generation

./: .gitignore  =1.0.0  RAG-SYSTEM_for_Content_Generation.txt  class_12_physics_chapter_1_Electric_Charges_and_Fields.md  class_12_physics_chapter_2_Electrostatic_Potential_and_Capacitance.md  class_12_physics_chapter_3_Current_Electricity.md  class_12_physics_chapter_4_Moving_Charges_and_Magnetism.md  class_12_physics_chapter_5_Magnetism_and_Matter.md  new.txt  process_chapters_gpu.py  pyproject.toml  query_documents.py  requirements_complete.txt  requirements_openai.txt
RAG-Anything/raganything/: modalprocessors.py  processor.py  prompt.py
RAG-Anything/raganything.egg-info/: PKG-INFO  SOURCES.txt
output/leph101/auto/: leph101.md  leph101_content_list.json  leph101_model.json
output/leph102/auto/: leph102.md  leph102_content_list.json  leph102_model.json
output/leph103/auto/: leph103.md  leph103_content_list.json  leph103_middle.json  leph103_model.json
output/leph104/auto/: leph104.md  leph104_content_list.json  leph104_middle.json  leph104_model.json
output/leph105/auto/: leph105.md  leph105_content_list.json  leph105_middle.json  leph105_model.json
output/leph106/auto/: leph106.md  leph106_content_list.json  leph106_middle.json  leph106_model.json
rag_storage/lightrag/: graph_chunk_entity_relation.graphml  kv_store_doc_status.json  kv_store_full_docs.json  kv_store_full_entities.json  kv_store_full_relations.json  kv_store_parse_cache.json  kv_store_text_chunks.json
src/physics_content/: crew.py  main.py  rag_system.py
(+4 files in other folders)
