[project]
name = "physics_content"
version = "0.1.0"
description = "physics_content using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai-tools>=0.69.0",
    "crewai[tools]>=0.175.0,<1.0.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "chromadb>=0.4.0",
    "pypdf>=3.0.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.0",
    "unstructured>=0.10.0",
    "rank-bm25>=0.2.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.46.3",
    "datasets>=4.1.0",
    "accelerate>=1.10.1",
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
    "pyyaml>=6.0.2",
    "lightrag-hku>=1.4.8.2",
    "lightrag>=0.0.0a2",
    "numpy>=2.2.6",
    "langchain-huggingface>=0.3.1",
    "asyncio>=4.0.0",
]

[project.scripts]
physics_content = "physics_content.main:run"
run_crew = "physics_content.main:run"
train = "physics_content.main:train"
replay = "physics_content.main:replay"
test = "physics_content.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
